# llm-finetune

./: README.md  config.py  karpathy.ipynb  mistral_tutorial.ipynb  perplexity.ipynb  pyproject.toml  summarization.ipynb  test_mistral_summarization.ipynb  test_summarization_seq2seq.ipynb  test_train.ipynb  train_summarizatio.py  train_summarization_causal_ml.py  utils.py
configs/: llama2_7b_lora.json
