[project]
name = "llm-finetune"
version = "0.1.0"
description = "Example how to finetune Decoder Only Models for Named Entities Recognition"
readme = "README.md"
requires-python = "==3.12.9"
authors = [{ name = "Mohamed Amri", email = "amri369@gmail.com"}]

dependencies = [
    "datasets>=4.1.1",
    "flash-attention>=1.0.0",
    "mistralai>=1.9.10",
    "notebook>=7.4.7",
    "pydantic==2.11.7",
    "pytest==8.3.3",
    "ruff==0.12.8",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[tool.uv.workspace]
members = ["llm-finetune"]
