[project]
name = "llm-finetune"
version = "0.1.0"
description = "Example how to finetune Decoder Only Models for Named Entities Recognition"
readme = "README.md"
requires-python = "==3.12.9"
authors = [{ name = "Mohamed Amri", email = "amri369@gmail.com"}]

dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "flash-attention>=1.0.0",
    "ipywidgets>=8.1.7",
    "mistralai>=1.9.10",
    "nltk>=3.9.2",
    "notebook>=7.4.7",
    "optimum>=1.27.0",
    "peft>=0.17.1",
    "pydantic==2.11.7",
    "pytest==8.3.3",
    "ruff==0.12.8",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "trl>=0.23.1",
]

[tool.uv.workspace]
members = ["llm-finetune"]
